--- a/_posts/2018-09-14-EUrghh.markdown
+++ b/_posts/2018-09-14-EUrghh.markdown
@@ -13,7 +13,7 @@ ogglength: 43073273
 excerpt_separator: <!--more-->
 ---
 
-In an surprise to everyone involved, we're still hitting our two month self-imposed schedule and ranting about software and the finer points of european law
+In an surprise to everyone involved, we're still hitting our two week self-imposed schedule and ranting about software and the finer points of european law
 
 <!--more-->
 
